--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,10 @@ dev = ["mypy>=1.11.1", "ruff>=0.6.1"]
 requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+packages = ["agent"]
+
+
 [tool.ruff]
 lint.select = [
     "E",    # pycodestyle
